--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Face Emotions Tracking</title>
     <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video id="video" width="640" height="480" autoplay muted></video>
+    <video id="video" autoplay muted></video>
+    <footer>Anshuman | Adrika | Unnati</footer>
 </body>
 </html>
