--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video id="video" autoplay muted></video>
+    <video id="video" width = "100%" height= "100%" autoplay muted></video>
 </body>
 </html>
