--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Face Emotions Tracking</title>
-  <script defer src="face-api.min.js"></script>
-  <script defer src="script.js"></script>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script defer src="face-api.min.js"></script>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <!-- Video feed fullscreen -->
-  <video id="video" autoplay muted playsinline></video>
-  <!-- Canvas for face tracking -->
-  <canvas id="overlay"></canvas>
+    <video id="video" width="640" height="480" autoplay muted></video>
 </body>
-
 </html>
