privacy policy included

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Face Expression Detection</title>
     <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video id="video" width="800" height="680" autoplay muted></video>
+    <video id="video" width="1200" height="720" autoplay muted></video>
 </body>
 </html>
