privacy policy included

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <video id="video" width="1000" height="750" autoplay muted></video>
+    <button id="sendEmail">Send Email</button>
 </body>
 </html>
